# aws_bedrock

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  pyproject.toml
.github/: README.md  SECRETS_SETUP.md
.github/workflows/: deploy-auth.yml  deploy-frontend.yml  deploy-text-summary.yml  deploy.yml
infra/: README.md  app.py  requirements.txt
infra/infra/: infra_stack.py
infra/services/: summary.py
infra_auth_stack/: .env.example  ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  QUICKSTART.md  README.md  README_DEPLOYMENT.md  app.py  manage_users.py  requirements.txt
infra_auth_stack/infra_auth_stack/: infra_auth_stack_stack.py
infra_auth_stack/services/: auth.py  requirements.txt
infra_auth_stack/tests/unit/: test_infra_auth_stack_stack.py
infra_frontend/: .gitignore  ARCHITECTURE.md  DEPLOYMENT_CHECKLIST.md  README.md  app.py  cdk.json  requirements.txt  source.bat
infra_frontend/infra_frontend/: __init__.py  frontend_stack.py
infra_frontend/tests/unit/: test_frontend_stack.py
infra_images/: app.py  requirements.txt
infra_images/infra_images/: infra_images_stack.py
infra_images/services/: image.py
infra_images/tests/unit/: test_infra_images_stack.py
src/: helper.py  image_gen.py  main.py
src/embeddings/: aws_titan_g1.py  cos_similarity.py  img_similarity.py
src/frontend/: README.md  index.html  login.html
src/frontend/css/: styles.css
src/frontend/js/: app.js  auth.js  config.js
src/img/creation/: aws_titan_g1.py  stability.py
src/langchain/: basic_rag.py  chain.py  pdf_rag.py
src/test/: summary_test.py
src/text/: chatbot.py
(+7 files in other folders)
