[project]
name = "bedrock"
version = "0.1.0"
description = "Bedrock guide for AWS"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.15",
    "faiss-cpu>=1.12.0",
    "langchain>=0.3.27",
    "langchain-aws>=0.2.31",
    "langchain-community>=0.3.29",
    "load-dotenv>=0.1.0",
    "numpy>=2.3.2",
    "pypdf>=6.0.0",
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"